--- a/src/scss/component/_project-modal.scss
+++ b/src/scss/component/_project-modal.scss
@@ -1,4 +1,12 @@
 @use '../base/var';
+.close {
+    inline-size: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+.close span {
+    @extend %button;
+}
 .modal {
     display: none;
     flex-direction: column;
@@ -11,10 +19,10 @@
 
     @extend %section;
     min-block-size: 90%;
-
     padding-block-start: var.$height-nav;
-
     background-color: var.$color-dark;
+
+    overflow: scroll;
 }
 
 .modal h1 {
@@ -34,5 +42,4 @@
 }
 .modal-content p {
     @extend %text;
-    
 }
