--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -6,7 +6,10 @@ mixin card-project(title, image, projectUrl)
             h1 #{title}
             .modal-image-container
                 img(src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png", alt="screenshoots aps")
-            .moda-text-container
+            .modal-text-container
+                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
+                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
+                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
                 p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
                 p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
                 p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
@@ -17,13 +20,13 @@ mixin card-project(title, image, projectUrl)
             img(src=`/img/project/${image}.jpg` alt='project image')
             .card--info
                 a(href=`${projectUrl}`).card-project--title #{title} 
-                span.card-project__info--about click for about the project
+                span.card-project__info--about click to see
             .card-project-overlay 
             .hastaelfondo
 
 section.section-project
     h1.section-main-title Projects
-    .project-container
+    .project-container#project-container
         +card-project('arielestebansoto.com', '1', '/index.html')
         +card-project('Mercado Libre Home', 'mercadolibre', '/projects/mercado-libre-home/index.html')
         +card-project('Breaking BApi', 'breakingbad', '/projects/breaking-bad-api/index.html')
