toggle modal,data.json

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,5 +8,6 @@ block content
     include ./component/main.pug
     include ./component/skill.pug
     include ./component/project.pug
+    .modal#modal
 block script
     +script('/index.js', 'module')
