--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -1,23 +1,7 @@
-mixin card-project(title, image, projectUrl)
-    .card
-        .modal
-            .close
-                span(id="modal-close") close
-            h1 #{title}
-            .modal-image-container
-                img(src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png", alt="screenshoots aps")
-            .modal-text-container
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
-                p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.
+mixin card-project(title, dataId, imageSrc, projectUrl)
+    .card(data-id=`${dataId}`)
         .card-project
-            img(src=`/img/project/${image}.jpg` alt='project image')
+            img(src=`./img/project/${imageSrc}` alt='project image')
             .card--info
                 a(href=`${projectUrl}`).card-project--title #{title} 
                 span.card-project__info--about click to see
@@ -27,6 +11,6 @@ mixin card-project(title, image, projectUrl)
 section.section-project
     h1.section-main-title Projects
     .project-container#project-container
-        +card-project('arielestebansoto.com', '1', '/index.html')
-        +card-project('Mercado Libre Home', 'mercadolibre', '/projects/mercado-libre-home/index.html')
-        +card-project('Breaking BApi', 'breakingbad', '/projects/breaking-bad-api/index.html')
+        +card-project('arielestebansoto.com', 'arielestebansoto', 'arielestebansoto/arielestebansoto.jpg', '/index.html')
+        +card-project('Mercado Libre Home', 'mercadolibre','mercadolibre/mercadolibre.jpg', '/projects/mercado-libre-home/index.html')
+        +card-project('Breaking BApi', 'breakingbad','breakingbad/breakingbad.jpg', '/projects/breaking-bad-api/index.html')
