refactored all typograhpy stiles, scrollbar

--- a/src/pug/component/main.pug
+++ b/src/pug/component/main.pug
@@ -1,6 +1,5 @@
 main.main
-    .main-subtitle
-        h1 Front-End Developer.
-    .main-title
-        h1 Ariel Soto
+    span.main-subtitle Front-End Developer.
+    span.main-title Ariel Soto
+        
 
