--- a/src/css/component/_nav.css
+++ b/src/css/component/_nav.css
@@ -53,6 +53,25 @@
   align-items: center;
 }
 
+body {
+  scrollbar-width: thin;
+  scrollbar-color: black grey;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: black;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 20px;
+  border: 1px solid grey;
+}
+
 .nav {
   display: grid;
   grid-template-columns: repeat(4, 4fr);
@@ -89,6 +108,11 @@
   text-align: center;
   font-size: 24px;
   text-transform: uppercase;
+}
+@media only screen and (min-width: 600px) {
+  .nav-icon a {
+    font-size: 31.2px;
+  }
 }
 
 .nav-menu {
