--- a/src/pug/component/project.pug
+++ b/src/pug/component/project.pug
@@ -3,13 +3,13 @@ mixin card-project(title, dataId, imageSrc, projectUrl)
         .card-project
             img(src=`./img/project/${imageSrc}` alt='project image')
             .card--info
-                a(href=`${projectUrl}`).card-project--title #{title} 
+                a(href=`${projectUrl}`).card-project--title.subtitle1 #{title} 
                 span.card-project__info--about click to see
             .card-project-overlay 
             .hastaelfondo
 
 section.section-project
-    h1.section-main-title Projects
+    h3.section-main-title Projects
     .project-container#project-container
         +card-project('arielestebansoto.com', 'arielestebansoto', 'arielestebansoto/arielestebansoto.jpg', '/index.html')
         +card-project('Mercado Libre Home', 'mercadolibre','mercadolibre/mercadolibre.jpg', '/projects/mercado-libre-home/index.html')
