--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -18,3 +18,19 @@
     flex-direction: column;
     align-items: center;
 }
+body {
+    scrollbar-width: thin; 
+    scrollbar-color: black grey;
+}
+*::-webkit-scrollbar {
+    width: 8px;
+  }
+  *::-webkit-scrollbar-track {
+    background: black;
+  }
+  *::-webkit-scrollbar-thumb {
+    background-color: grey;
+    border-radius: 20px;
+    border: 1px solid grey;
+  }
+  
