--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -39,6 +39,9 @@
     
     text-align: center;
     font-size: var.$icon-size;
+    @include var.breakpoint(var.$breakpoint-tablet) {
+        font-size: var.$icon-size * 1.3;
+    }
     text-transform: uppercase;
 }
 .nav-menu {
