--- a/style.css
+++ b/style.css
@@ -1,117 +1,6 @@
 /* grid responsive */
 /* --- */
-.main-title h1 {
-  color: #ffffff;
-  font-size: 60px;
-  letter-spacing: -0.5px;
-  line-height: 84px;
-  font-weight: 100;
-  font-weight: 600;
-}
-@media only screen and (min-width: 600px) {
-  .main-title h1 {
-    color: #ffffff;
-    font-size: 98px;
-    letter-spacing: -1.5px;
-    line-height: 137.2px;
-    font-weight: 100;
-    font-weight: 600;
-  }
-}
-
-.main-subtitle h1 {
-  color: #ffffff;
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: 33.6px;
-  font-weight: 400;
-  font-weight: 600;
-}
-@media only screen and (min-width: 600px) {
-  .main-subtitle h1 {
-    color: #ffffff;
-    font-size: 48px;
-    letter-spacing: 0;
-    line-height: 67.2px;
-    font-weight: 400;
-    font-weight: 600;
-  }
-}
-
-.menu-link {
-  color: #ffffff;
-  font-size: 36px;
-  letter-spacing: 0.25px;
-  line-height: 50.4px;
-  font-weight: 400;
-  font-weight: 600;
-}
-@media only screen and (min-width: 600px) {
-  .menu-link {
-    color: #ffffff;
-    font-size: 48px;
-    letter-spacing: 0;
-    line-height: 67.2px;
-    font-weight: 400;
-    font-weight: 600;
-  }
-}
-
-.about a {
-  color: #ffffff;
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: 33.6px;
-  font-weight: 400;
-  font-weight: 600;
-}
-@media only screen and (min-width: 600px) {
-  .about a {
-    color: #ffffff;
-    font-size: 48px;
-    letter-spacing: 0;
-    line-height: 67.2px;
-    font-weight: 400;
-  }
-}
-
-.section-main-title {
-  color: #ffffff;
-  font-size: 36px;
-  letter-spacing: 0.25px;
-  line-height: 50.4px;
-  font-weight: 400;
-  font-weight: 600;
-}
-@media only screen and (min-width: 600px) {
-  .section-main-title {
-    color: #ffffff;
-    font-size: 60px;
-    letter-spacing: -0.5px;
-    line-height: 84px;
-    font-weight: 100;
-    font-weight: 600;
-  }
-}
-
-.modal h1, .section-main-subtitle {
-  color: #ffffff;
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: 33.6px;
-  font-weight: 400;
-}
-@media only screen and (min-width: 600px) {
-  .modal h1, .section-main-subtitle {
-    color: #ffffff;
-    font-size: 48px;
-    letter-spacing: 0;
-    line-height: 67.2px;
-    font-weight: 400;
-  }
-}
-
-.modal-content p, .contact-me span, .section-main-text, .post-text {
+.post-text {
   color: #ffffff;
   font-size: 16px;
   letter-spacing: 0.5px;
@@ -119,46 +8,12 @@
   font-weight: 400;
 }
 @media only screen and (min-width: 600px) {
-  .modal-content p, .contact-me span, .section-main-text, .post-text {
+  .post-text {
     color: #ffffff;
     font-size: 18px;
     letter-spacing: 0px;
     line-height: 25.2px;
     font-weight: 400;
-  }
-}
-
-.close span, .contact-me a {
-  color: #ffffff;
-  font-size: 14px;
-  letter-spacing: 1.25px;
-  line-height: 19.6px;
-  font-weight: 500;
-}
-@media only screen and (min-width: 600px) {
-  .close span, .contact-me a {
-    color: #ffffff;
-    font-size: 32px;
-    letter-spacing: 1.25px;
-    line-height: 44.8px;
-    font-weight: 400;
-  }
-}
-
-.card-project--title {
-  color: #ffffff;
-  font-size: 16px;
-  letter-spacing: 0.15px;
-  line-height: 22.4px;
-  font-weight: 500;
-}
-@media only screen and (min-width: 600px) {
-  .card-project--title {
-    color: #ffffff;
-    font-size: 20px;
-    letter-spacing: 0.1px;
-    line-height: 28px;
-    font-weight: 500;
   }
 }
 
@@ -256,7 +111,7 @@
   color: #ffffff;
 }
 
-.blog-entry, .card-project--title, .menu-link, .about a, .contact-me a, .nav-icon a {
+.blog-entry, .card-project--title, .menu-link, .about a, .nav-icon a {
   text-decoration: none;
 }
 
@@ -269,6 +124,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+body {
+  scrollbar-width: thin;
+  scrollbar-color: black grey;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: black;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 20px;
+  border: 1px solid grey;
 }
 
 .nav {
@@ -307,6 +181,11 @@
   text-align: center;
   font-size: 24px;
   text-transform: uppercase;
+}
+@media only screen and (min-width: 600px) {
+  .nav-icon a {
+    font-size: 31.2px;
+  }
 }
 
 .nav-menu {
@@ -362,15 +241,31 @@
 .main-subtitle {
   grid-column: 1/3;
   grid-row: 2/4;
+  font-size: 25px;
+  letter-spacing: 0;
+  line-height: 37px;
+  font-weight: bold;
+}
+@media only screen and (min-width: 600px) {
+  .main-subtitle {
+    font-size: 48px;
+    line-height: 67px;
+  }
 }
 
 .main-title {
   grid-column: 1/4;
   grid-row: 5/8;
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: bold;
 }
-
-.main-title h1 {
-  color: #ffffff;
+@media only screen and (min-width: 600px) {
+  .main-title {
+    font-size: 98px;
+    line-height: 137px;
+  }
 }
 
 .section-main-title {
@@ -473,7 +368,18 @@
 }
 
 .menu-link {
+  font-size: 36px;
+  letter-spacing: 0.25px;
+  line-height: 50px;
+  font-weight: bold;
   text-transform: uppercase;
+}
+@media only screen and (min-width: 600px) {
+  .menu-link {
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 57px;
+  }
 }
 
 .menu-contact {
@@ -490,6 +396,20 @@
 
 .about {
   margin-block-end: 12px;
+}
+
+.about a {
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: 33px;
+  font-weight: bold;
+}
+@media only screen and (min-width: 600px) {
+  .about a {
+    font-size: 48px;
+    letter-spacing: 0;
+    line-height: 57px;
+  }
 }
 
 .social-media {
@@ -509,11 +429,6 @@
 
 .contact-me {
   block-size: 100%;
-}
-
-.contact-me a {
-  display: inline-block;
-  padding: 12px;
 }
 
 .contact-me {
@@ -637,6 +552,11 @@
 .modal-text-container {
   overflow-y: scroll;
   block-size: 30vh;
+}
+
+.modal-text-container a {
+  display: block;
+  margin-block-end: 12px;
 }
 
 footer {
@@ -886,4 +806,83 @@ footer {
   inline-size: 100%;
   block-size: auto;
   object-fit: cover;
+}
+
+h1 {
+  font-size: 98px;
+  letter-spacing: -1.5px;
+  line-height: 137.2px;
+  font-weight: 100;
+}
+
+h2 {
+  font-size: 60px;
+  letter-spacing: -0.5px;
+  line-height: 84px;
+  font-weight: 100;
+}
+
+h3 {
+  font-size: 49px;
+  letter-spacing: initial;
+  line-height: 68.6px;
+  font-weight: 400;
+}
+
+h4 {
+  font-size: 35px;
+  letter-spacing: 0.25px;
+  line-height: 49px;
+  font-weight: 400;
+}
+
+h5 {
+  font-size: 24px;
+  letter-spacing: -1.5px;
+  line-height: 33.6px;
+  font-weight: 400;
+}
+
+h6 {
+  font-size: 20px;
+  letter-spacing: 0.15px;
+  line-height: 28px;
+  font-weight: 500;
+}
+
+.subtitle1 {
+  font-size: 16px;
+  letter-spacing: 0.15px;
+  line-height: 22.4px;
+  font-weight: 400;
+}
+
+.subtitle2 {
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: 19.6px;
+  font-weight: 500;
+}
+
+p, .body1 {
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  line-height: 22.4px;
+  font-weight: 400;
+  margin-block-end: 24px;
+}
+
+.body2 {
+  font-size: 14px;
+  letter-spacing: 0.25px;
+  line-height: 19.6px;
+  font-weight: 400;
+}
+
+button, .btn {
+  font-size: 14px;
+  letter-spacing: 1.25px;
+  line-height: 19.6px;
+  font-weight: 500;
+  text-transform: uppercase;
 }
