--- a/src/main.css
+++ b/src/main.css
@@ -15,3 +15,13 @@
     background: -webkit-linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
     background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); 
 }
+
+.offcanvas {
+    width: 75%;
+    background-color: rgba(133, 206, 248, .3);
+    backdrop-filter: blur(4px);
+    box-shadow: -1px 1px 4px 0 rgba(255, 255, 255, .05) ;
+
+    border-left: 1px solid rgba(255, 255, 255, 1);
+    border-radius: 10px 0 0 10px;
+}
