menu styling, home sections, delete WebWrapprapper

--- a/src/main.css
+++ b/src/main.css
@@ -15,7 +15,12 @@
     background: -webkit-linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
     background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); 
 }
-
+body {
+    background: #0f2027;
+    background: -webkit-linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
+    background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); 
+    color: white;
+}
 .offcanvas {
     width: 97%;
     height: 97%;
