routing and refactoring of skills and works component

--- a/src/main.css
+++ b/src/main.css
@@ -16,6 +16,7 @@
     background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); 
 }
 body {
+    min-height: 100vh;
     background: #0f2027;
     background: -webkit-linear-gradient(to bottom, #0f2027, #203a43, #2c5364);
     background: linear-gradient(to bottom, #0f2027, #203a43, #2c5364); 
