--- a/src/main.css
+++ b/src/main.css
@@ -23,15 +23,15 @@ body {
     color: white;
 }
 .offcanvas {
-    width: 97%;
-    height: 97%;
-    margin: 0 auto;
+    width: 75%;
     background-color: rgba(133, 206, 248, .3);
     backdrop-filter: blur(4px);
     box-shadow: 4px 4px 10px 5px rgba(0, 0, 0, .5) ;
-
-    border-right: 1px solid rgba(255, 255, 255, 1);
-    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    
+/*     height: 97%;
+    margin: 0 auto;
+ */    border-right: 1px solid rgba(255, 255, 255, 1);
+    /* border-bottom: 1px solid rgba(255, 255, 255, 1);
     border-left: 1px solid rgba(255, 255, 255, .5);
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 15px 15px; */
 }
