--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
+    font-family: 'Exo 2', sans-serif;    
 }
 
 ::-webkit-scrollbar {
