--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,12 @@
-body {
+* {
+    cursor: none;
     margin: 0;
     box-sizing: border-box;
+
+}
+body {
     font-family: 'Exo 2', sans-serif;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
